added libs + explainaition in readMe